# perceus

./: AUTHORS  BUILD  ChangeLog  INSTALL  MODULES  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.status  config.status.lineno  configure  configure.in  configure.lineno  libtool  perceus.spec  perceus.spec.in
DEBIAN/: conffiles  control
_initramfs/etc/: initramfs.conf  inittab
_initramfs/etc/detect/: updates
_initramfs/lib/: ld-linux-x86-64.so.2  libc.so.6  libnss_dns.so.2  libuuid.so.1
_initramfs/lib/modules/2.6.32-perceus/: modules.alias  modules.dep  modules.order  modules.symbols
_initramfs/lib64/: ld-linux-x86-64.so.2  libc.so.6  libnss_dns.so.2  libpthread.so.0  libresolv.so.2  librt.so.1  libuuid.so.1
_initramfs/libexec/: kexec  kexec-legacy
_initramfs/sbin/: detect  kexec  mdadm  mke2fs  mkfs.xfs  modconf-generator  provisiond
debian/: changelog  control  files  rules
debian/perceus/DEBIAN/: conffiles  control  md5sums
debian/perceus/etc/bash_completion.d/: perceus_completion
debian/perceus/etc/init.d/: provisiond
debian/perceus/etc/perceus/: nodescripts  vnfs
debian/perceus/usr/include/: ethinfo.h
debian/perceus/usr/sbin/: ethinfo  perceus-htpasswd  perceus-init  provisiond
docs/: Makefile  perceus-nsa-quickstart.tex  perceus-userguide.tex  perceus-userguide.tex.in
docs/.svn/: all-wcprops  entries
etc/: Makefile  Makefile.in  Perceus_Include.pm  Perceus_Include.pm.in  defaults.conf  perceus.conf
etc/.svn/: all-wcprops  entries
etc/.svn/text-base/: Makefile.am.svn-base
images/: Makefile  Makefile.am  Makefile.in
images/.svn/: all-wcprops  entries
images/.svn/text-base/: perceus-splash.png.svn-base
man/: Makefile  Makefile.in  perceus.8
man/.svn/: all-wcprops  entries
man/.svn/text-base/: Makefile.am.svn-base  perceus.8.svn-base
modules/: Makefile  Makefile.in
modules/.svn/: all-wcprops  entries
modules/.svn/text-base/: Makefile.am.svn-base
modules/groupfile/: Makefile  Makefile.in
modules/groupfile/.svn/: all-wcprops  entries
modules/groupfile/.svn/text-base/: defaultroles.svn-base
modules/hostname/: Makefile  Makefile.in  defaultroles
modules/hostname/.svn/: all-wcprops  entries
modules/ipaddr/: Makefile  Makefile.am  Makefile.in  activate
modules/ipaddr/.svn/: all-wcprops  entries
modules/ipaddr/.svn/text-base/: 50-ipaddr.pl.svn-base
modules/masterauth/: 50-masterauth.pl  Makefile  Makefile.am  Makefile.in
modules/masterauth/.svn/: all-wcprops  entries
modules/modprobe/: Makefile  Makefile.am  Makefile.in
modules/modprobe/.svn/: all-wcprops  entries
modules/modprobe/.svn/prop-base/: Makefile.am.svn-base
modules/modprobe/.svn/text-base/: 50-modprobe.sh.svn-base  activate.svn-base
modules/passwdfile/: 50-passwd.sh  Makefile  Makefile.in
modules/passwdfile/.svn/: all-wcprops  entries
modules/passwdfile/.svn/text-base/: perceus-useradd.svn-base
modules/slurm/: Makefile  Makefile.in
modules/slurm/.svn/: all-wcprops  entries
modules/slurm/.svn/text-base/: Makefile.am.svn-base  defaultroles.svn-base
modules/stateful/: Makefile  Makefile.in
modules/stateful/.svn/: all-wcprops  entries
modules/stateful/.svn/text-base/: Makefile.am.svn-base  activate.svn-base
modules/syncnodes/: Makefile  Makefile.in
modules/syncnodes/.svn/: all-wcprops  entries
modules/syncnodes/.svn/text-base/: activate.svn-base
post/: Makefile
post/.svn/: all-wcprops  entries
post/.svn/text-base/: Makefile.in.svn-base
scripts/: Makefile  Makefile.am  Makefile.in
scripts/.svn/: all-wcprops  entries
scripts/cgi/: Makefile  Makefile.in  index.cgi
scripts/cgi/.svn/: all-wcprops  entries
scripts/cgi/.svn/text-base/: Makefile.am.svn-base  cornerbl.gif.svn-base  main.html.svn-base
scripts/demos/: Makefile  Makefile.in  bulkaddnode.pl  daemon-bench.pl
scripts/demos/.svn/: all-wcprops  entries
scripts/demos/.svn/text-base/: Makefile.am.svn-base
scripts/init.d/: Makefile  Makefile.in  debian-perceus  debian-perceus.in  gentoo-perceus  gentoo-provisiond  nsa-perceus  nsa-provisiond  nsa-provisiond.in  perceus  redhat-perceus  redhat-perceus.in  redhat-provisiond  slackware-perceus  slackware-provisiond  suse-perceus  suse-provisiond
scripts/init.d/.svn/: all-wcprops  entries
scripts/initramfs/: Makefile  Makefile.in  dhcp-script  hw_load  hw_unload  rc.perceus  reboot30
scripts/initramfs/.svn/: all-wcprops  entries
scripts/lib/: Makefile  Makefile.am  Makefile.in
scripts/lib/.svn/: all-wcprops  entries
scripts/lib/Perceus/: About.pm  Configure.pm  Contact.pm  DB.pm  Debug.pm  Dump.pm  Groups.pm  Makefile  Makefile.in  Masters.pm  Sanity.pm
scripts/nodescripts/: 99-zzzlast.sh  Makefile  Makefile.am  Makefile.in
scripts/nodescripts/.svn/: all-wcprops  entries
scripts/share/: Makefile  Makefile.in  caos-2.0-genchroot.sh  centos-5.1-genchroot.sh  chroot2stateful.sh  import-isc-dhcpd.pl  mbd-packs-mgr.sh  mint-buntu-deb_genchroot.sh  mkelf.sh  rhel-6-genchroot.sh  scientific-linux-4.5-genchroot.sh  suse-vnfs.sh  ubuntu-lucid-genchroot.sh
scripts/share/.svn/: all-wcprops  entries
src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  ethinfo.c  util.c
src/.deps/: ethinfo.Plo
src/.svn/: all-wcprops  entries
src/.svn/text-base/: util.c.svn-base
src/detect/: AUTHORS  Makefile  Makefile.in  README  acinclude.m4  configure.in  detect.c  getids.c  getmod.c  ignore  readconfs.c  util.c
src/detect/.deps/: detect-detect.Po  detect-getids.Po  detect-getmod.Po  detect-readconfs.Po  detect-util.Po
src/detect/.svn/: all-wcprops  entries
src/detect/.svn/text-base/: AUTHORS.svn-base  ChangeLog.svn-base  Makefile.am.svn-base  autogen.sh.svn-base  classids.svn-base  config.h.in.svn-base  defs.h.svn-base  detect.h.svn-base  pcimap.svn-base
src/ethinfo/: Makefile  Makefile.in  ethinfo.c
src/ethinfo/.deps/: ethinfo.Po
src/ethinfo/.svn/: all-wcprops  entries
src/provisiond/: Makefile  Makefile.am  Makefile.in  provisiond.c
src/provisiond/.deps/: provisiond.Po  util.Po
src/provisiond/.svn/: all-wcprops  entries
(+647 files in other folders)
