AC_PREREQ(2.59)
AC_INIT(detect, 1.34, gmk*at*runlevelzero.net)
AC_CONFIG_SRCDIR([.])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_INSTALL
AM_CONFIG_HEADER([config.h])
AC_PROG_LIBTOOL
AC_PROG_CC

AC_EXPAND_DIR(sysconfigdir, "$sysconfdir/detect")
AC_DEFINE_UNQUOTED(DETECTSYSCONFIGDIR, "$sysconfigdir", [Full path to configuration directory])
AC_SUBST(DETECTSYSCONFIGDIR)

detect_sbindir="/sbin"
AC_SUBST(detect_sbindir)

AC_OUTPUT(Makefile)
